syntax = "proto3";

option csharp_namespace = "Specialization.GRPC";

service SpecializationProtoService {
	rpc GetSpecName (GetSpecRequest) returns (SpecName);
}

message GetSpecRequest {
	string Id = 1;
}

message SpecName {
	string Name = 1;
}